# AIE9

./: .gitignore
00_AIE_Quicklinks/: README.md
00_AIM_Quicklinks/: README.md
01_Vibe_Check/: README.md
02_Dense_Vector_Retrieval/: Pythonic_RAG_Assignment.ipynb  README.md  pyproject.toml
03_The_Agent_Loop/: README.md  The_Agent_Loop_Assignment.ipynb  pyproject.toml
04_Agentic_RAG_From_Scratch/: Agentic_RAG_From_Scratch_Assignment.ipynb  README.md  pyproject.toml
05_Multi_Agent_with_LangGraph/: Multi_Agent_Applications_Assignment.ipynb  README.md  heirarchical_tutorial.ipynb  pyproject.toml
06_Agent_Memory/: Agent_Memory_Assignment.ipynb  README.md  pyproject.toml
07_Deep_Agents/: .env.sample  Deep_Agents_Assignment.ipynb  README.md  pyproject.toml
08_Open_DeepResearch/: README.md  open-deep-research.ipynb
09_Synthetic_Data_Generation_and_LangSmith/: README.md  Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  pyproject.toml  usecase_data_kg.json
10_Evaluating_RAG_With_Ragas/: Evaluating_Agents_Assignment.ipynb  Evaluating_RAG_Assignment.ipynb  README.md  pyproject.toml
11_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  README.md  eval_dataset.csv  langsmith_retreival_compute.csv  pyproject.toml  scores.csv
12_Certification_Challenge/: README.md
12_Industry_Use_Cases/: README.md
14_MCP_Connectors/: .env.sample  README.md  Session_14_MCP_Connectors.ipynb  pyproject.toml  summary.md
15_LangGraph_Deployments/: .env.example  README.md  langgraph.json  pyproject.toml
16_LLM_Servers/: README.md  pyproject.toml  (+1 more)
(+49 files in other folders)
