[project]
name = "12-model-context-protocol"
version = "0.1.0"
description = "MCP-Powered X Post Summarizer — LangGraph Agent with GitHub MCP Tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=0.3.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "nest-asyncio>=1.6.0",
]
